# supply-chain-demo

./: .env.example  .gitignore  README.md  config.py  db.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
agents/: disruption_agent.py  eta_agent.py  llm.py  notification_agent.py
agents/tools/: supply_chain_tools.py
generators/: gps_gen.py  order_gen.py  scenarios.py  seed_data.py  seed_pipeline.py  shipment_gen.py  warehouse_gen.py
grafana/: dashboard.json  datasource.yml
scripts/: dashboard_query.py  reset.py  run_agent.py  run_demo.py  run_generators.py  setup_schema.py  trigger_disruption.py
sql/: 01-tables.sql  02-materialized-views.sql
web/: app.py  panels.py  sql_docs.py  theme.py
